syntax = "proto3";
package main;

option go_package ="./RobotService";

message isAvailable{
  bool confirmation = 1;
}
message Instructions{
  repeated int32 instruction = 1;
}
service askForTask {
  //function for robot to call,
  rpc askForTask(isAvailable) returns (Instructions) {}
}